cmake_minimum_required(VERSION 3.19)
project(wolf3d)

set(CMAKE_CXX_STANDARD 14)

include_directories(wolfsrc)

add_executable(wolf3d
        wolfsrc/audiosdm.h
        wolfsrc/audiosod.h
        wolfsrc/audiowl1.h
        wolfsrc/audiowl6.h
        wolfsrc/budiosod.h
        wolfsrc/budiowl6.h
        wolfsrc/c0.asm
        wolfsrc/contigsc.c
        wolfsrc/detect.c
        wolfsrc/f_spear.h
        wolfsrc/foreign.h
        wolfsrc/gfxe_sod.h
        wolfsrc/gfxe_wl1.h
        wolfsrc/gfxe_wl6.h
        wolfsrc/gfxv_sdm.h
        wolfsrc/gfxv_sod.h
        wolfsrc/gfxv_wl1.h
        wolfsrc/gfxv_wl6.h
        wolfsrc/h_ldiv.asm
        wolfsrc/id_ca.c
        wolfsrc/id_ca.h
        wolfsrc/id_head.h
        wolfsrc/id_heads.h
        wolfsrc/id_in.c
        wolfsrc/id_in.h
        wolfsrc/id_mm.c
        wolfsrc/id_mm.h
        wolfsrc/id_pm.c
        wolfsrc/id_pm.h
        wolfsrc/id_sd.c
        wolfsrc/id_sd.h
        wolfsrc/id_sd_a.asm
        wolfsrc/id_us.h
        wolfsrc/id_us_1.c
        wolfsrc/id_us_a.asm
        wolfsrc/id_vh.c
        wolfsrc/id_vh.h
        wolfsrc/id_vh_a.asm
        wolfsrc/id_vl.c
        wolfsrc/id_vl.h
        wolfsrc/id_vl_a.asm
        wolfsrc/jabhack.asm
        wolfsrc/mapssdm.h
        wolfsrc/mapssod.h
        wolfsrc/mapswl1.h
        wolfsrc/mapswl6.h
        wolfsrc/mapswlf.h
        wolfsrc/munge.c
        wolfsrc/oldscale.c
        wolfsrc/piclist.h
        wolfsrc/sdmver.h
        wolfsrc/sharemsg.h
        wolfsrc/sodver.h
        wolfsrc/spanish.h
        wolfsrc/spanver.h
        wolfsrc/version.h
        wolfsrc/whack_a.asm
        wolfsrc/wl_act1.c
        wolfsrc/wl_act2.c
        wolfsrc/wl_agent.c
        wolfsrc/wl_asm.asm
        wolfsrc/wl_debug.c
        wolfsrc/wl_def.h
        wolfsrc/wl_dr_a.asm
        wolfsrc/wl_draw.c
        wolfsrc/wl_game.c
        wolfsrc/wl_inter.c
        wolfsrc/wl_main.c
        wolfsrc/wl_menu.c
        wolfsrc/wl_menu.h
        wolfsrc/wl_play.c
        wolfsrc/wl_scale.c
        wolfsrc/wl_state.c
        wolfsrc/wl_text.c
        wolfsrc/wlfj1ver.h
        wolfsrc/wolf1ver.h
        wolfsrc/wolfgtv.h
        wolfsrc/wolfhack.c
        wolfsrc/wolfjver.h
        wolfsrc/wolfver.h)
